<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for the editor -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditorActivity">
    <!-- name category -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout3"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">

        <!-- Label -->
        <TextView
            android:text="@string/category_item_picture"
            style="@style/CategoryStyle"
            android:layout_weight="0.60"
            android:layout_height="match_parent" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Image field -->
            <ImageView
                android:id="@+id/edit_item_image"
                style="@style/EditorFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="148dp"
                android:src="@mipmap/ic_launcher" />

        </LinearLayout>
    </LinearLayout>
    <!-- name category -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:id="@+id/linearLayout4">

        <!-- Label -->
        <TextView
            android:text="@string/category_item_name"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_item_name"
                android:hint="@string/hint_item_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

        </LinearLayout>
    </LinearLayout>
    <!-- price category -->
    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/linearLayout4">

        <!-- Label -->
        <TextView
            android:text="@string/hint_item_quantity"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- price field -->
            <EditText
                android:id="@+id/edit_item_quantity"
                android:hint="@string/hint_item_quantity"
                android:inputType="number"
                style="@style/EditorFieldStyle" />
        </RelativeLayout>
    </LinearLayout>
    <!-- price category -->
    <LinearLayout
        android:id="@+id/container_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/container_quantity"
        app:layout_constraintTop_toBottomOf="@+id/container_quantity"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/container_quantity">

        <!-- Label -->
        <TextView
            android:text="@string/category_price"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- price field -->
            <EditText
                android:id="@+id/edit_item_price"
                android:hint="@string/hint_item_price"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

            <!-- Units for price ($) -->
            <TextView
                android:id="@+id/label_price_units"
                android:text="@string/unit_item_price"
                style="@style/EditorUnitsStyle" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/order_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/circle"
        android:elevation="0dp"
        android:text="@string/order_button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="425dp" />
</android.support.constraint.ConstraintLayout>
